Add UDP endpoint support (#485)
